--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "axios": "1.8.4",
     "cors": "2.8.5",
     "express": "5.1.0",
+    "firebase-admin": "13.3.0",
     "form-data": "4.0.2",
     "jpeg-js": "0.4.4",
-    "multer": "1.4.5-lts.2"
+    "multer": "1.4.5-lts.2",
+    "mysql2": "3.14.0",
+    "zod": "3.24.3"
   },
   "devDependencies": {
     "morgan": "1.10.0"
